code cleanups, mostly collections
Signed-off-by: Adrian Cole <adrian@tetrate.io>