@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2020 The OpenZipkin Authors
+ * Copyright 2015-2024 The OpenZipkin Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
@@ -19,7 +19,6 @@ import com.datastax.oss.driver.api.core.cql.BoundStatementBuilder;
 import com.datastax.oss.driver.api.core.cql.PreparedStatement;
 import com.google.auto.value.AutoValue;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -111,7 +110,7 @@ final class SelectTraceIdsFromServiceSpan extends ResultSetFutureCall<AsyncResul
     }
 
     Call<Map<String, Long>> newCall(List<Input> inputs) {
-      if (inputs.isEmpty()) return Call.create(Collections.emptyMap());
+      if (inputs.isEmpty()) return Call.create(Map.of());
       if (inputs.size() == 1) return newCall(inputs.get(0));
 
       List<Call<Map<String, Long>>> bucketedTraceIdCalls = new ArrayList<>();
@@ -152,7 +151,7 @@ final class SelectTraceIdsFromServiceSpan extends ResultSetFutureCall<AsyncResul
           bucketedTraceIdCalls.add(newCall(scopedInputs));
         }
 
-        if (bucketedTraceIdCalls.isEmpty()) return Call.create(Collections.emptyMap());
+        if (bucketedTraceIdCalls.isEmpty()) return Call.create(Map.of());
         if (bucketedTraceIdCalls.size() == 1) return bucketedTraceIdCalls.get(0);
         return new AggregateIntoMap<>(bucketedTraceIdCalls);
       }
